qbittorrent/service.yml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  ports:
    - name: web
      port: 8080
      targetPort: web
  selector:
    app: qbittorrent
